pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: praveen-ns
spec:
  containers:
  - name: nginx-container
    image: nginx
