app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: gateway-ns
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: fitness-tracker-app

  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]

    spec:
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest

          ports:
            - containerPort: 5000

          # 🔥 FOR LOOP OOM SCRIPT
          command: ["/bin/sh"]
          args:
            - -c
            - |
              echo "Starting FOR LOOP OOM simulation...";
              for i in $(seq 1 10000); do
                echo "Allocating chunk $i";
                a="$a $(head -c 5M </dev/zero | tr '\0' 'a')";
              done

          # 🔥 LOW MEMORY LIMIT
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: gateway-ns
spec:
  selector:
    app: fitness-tracker-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
